Fix bug: bar chart collapses

--- a/web/less/details.less
+++ b/web/less/details.less
@@ -254,6 +254,7 @@
       color: white;
       display: inline-block;
       white-space: nowrap;
+      width: 100%;
       
       .number {
         position: absolute;
